--- a/package.json
+++ b/package.json
@@ -9,18 +9,26 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@turf/boolean-point-in-polygon": "^7.2.0",
+    "@turf/distance": "^7.2.0",
+    "@turf/helpers": "^7.2.0",
+    "@turf/point-to-line-distance": "^7.2.0",
     "@types/leaflet": "^1.9.20",
+    "@types/leaflet-geosearch": "^2.7.1",
     "idb": "^8.0.3",
     "leaflet": "^1.9.4",
+    "leaflet-geosearch": "^4.2.1",
     "next": "15.5.0",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-leaflet": "^5.0.0"
+    "react-leaflet": "^5.0.0",
+    "react-leaflet-geosearch": "^0.3.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.12",
+    "@types/geojson": "^7946.0.16",
     "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/postcss-load-config": "^2.0.1",
