--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,7 +3,7 @@
   "short_name": "Parkcheck",
   "description": "Check if you have parked legally, prevent fines.",
   "id": "/parkcheck/",
-  "start_url": "/parkcheck/",
+  "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#007bff",
