--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@ducanh2912/next-pwa": "^10.2.9",
     "@turf/boolean-point-in-polygon": "^7.2.0",
     "@turf/distance": "^7.2.0",
     "@turf/helpers": "^7.2.0",
@@ -20,6 +19,7 @@
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^4.2.1",
     "next": "15.5.0",
+    "next-pwa": "^5.6.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-leaflet": "^5.0.0",
