--- a/package.json
+++ b/package.json
@@ -1,47 +1,43 @@
 {
   "name": "parkcheck",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --webpack",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "next lint"
   },
   "dependencies": {
+    "@serwist/precaching": "^9.4.2",
+    "@serwist/sw": "^9.4.2",
     "@turf/boolean-point-in-polygon": "^7.2.0",
     "@turf/distance": "^7.2.0",
     "@turf/helpers": "^7.2.0",
     "@turf/point-to-line-distance": "^7.2.0",
-    "@types/leaflet": "^1.9.20",
-    "@types/leaflet-geosearch": "^2.7.1",
-    "idb": "^8.0.3",
-    "leaflet": "^1.9.4",
-    "leaflet-geosearch": "^4.2.1",
-    "next": "15.5.0",
-    "next-pwa": "^5.6.0",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-leaflet": "^5.0.0",
-    "react-leaflet-geosearch": "^0.3.4"
+    "idb": "8.0.3",
+    "leaflet": "1.9.4",
+    "leaflet-geosearch": "4.2.1",
+    "next": "16.1.1",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
+    "react-leaflet": "5.0.0"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4.1.12",
+    "@eslint/eslintrc": "^3.2.0",
+    "@serwist/next": "^9.5.0",
+    "@tailwindcss/postcss": "^4.1.18",
     "@types/geojson": "^7946.0.16",
-    "@types/next-pwa": "^5.6.9",
-    "@types/node": "^20",
-    "@types/postcss-load-config": "^2.0.1",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/leaflet": "1.9.21",
+    "@types/node": "^22.10.5",
+    "@types/react": "19.2.1",
+    "@types/react-dom": "19.2.1",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
-    "eslint-config-next": "15.5.0",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^4",
-    "typescript": "^5"
-  },
-  "overrides": {
-    "@types/next": "5.6.9"
+    "eslint": "^9.17.0",
+    "eslint-config-next": "16.1.1",
+    "postcss": "^8.5.1",
+    "serwist": "^9.4.2",
+    "tailwindcss": "^4.1.18",
+    "typescript": "5.9.2"
   }
 }
